<resources>
    <string name="app_name">TestAsyncrounousAndroid</string>
    <string name="login">Login</string>
    <string name="perform_login">Perform Login</string>
    <string name="password">Password</string>
</resources>
